--- a/WebServer/templates/test.html
+++ b/WebServer/templates/test.html
@@ -93,7 +93,9 @@
                     <input class="faninput"  type="text" name = "fan16" value = "" placeholder="speed">
                     <p>{{data['fan16'][1]}}</p>
                 </div>
-                                    
+               <!--  <p><input type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p> -->
+                <button class="button" button type = "sumbit" value = "UPDATE FANS" name = "updatefan" style="vertical-align:middle" form = "gridform"><span>Update</span></button>
+                <button class="button" button type = "sumbit" value = "UPDATE FANS" id = "test" name = "updatefan" style="vertical-align:middle" class = "test" form = "gridform"><span>STOP</span></button>   
             </form>
 
 
@@ -101,11 +103,8 @@
                 <form method="post" action="/">
                     <h1>All Fans </h1>
                     <p><input class = "faninput" input type="text" name = "ALLFANS" value = "" placeholder="speed"></p>
-                    <p><input type = "submit" value="UPDATE ALL FANS" name="updatefan"/></p>
-                </form>
-                    <p><input type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p>
-                <form>
-                    <p><input type = "submit" value="SET FANS" name="setfan" /></p>
+                    <!-- <p><input type = "submit" value="UPDATE ALL FANS" name="updatefan"/></p> -->
+                    <button class="button" button type = "sumbit" value = "UPDATE ALL FANS" name = "updatefan" style="vertical-align:middle"><span>UPDATE ALL FANS</span></button>
                 </form>
             </div>
 
@@ -131,31 +130,36 @@
 
                             slider.oninput = function() {output.innerHTML = this.value;}
                         </script>
-                        <p><input type = "submit" value="UPDATE ANGLE" name="updateactuator"/></p>
+                        <p><button class="button" button type = "sumbit" value = "UPDATE ANGLE" name = "updateactuator" style="vertical-align:middle"><span>Update Angle</span></button></p>
+                       <!-- <p><input type = "submit" value="UPDATE ANGLE" name="updateactuator"/></p> -->
+                      <!--  <button class="button" button type = "sumbit" value = "UPDATE ANGLE" name = "updateactuator" style="vertical-align:middle"><span>Update Angle</span></button> -->
                     </div>
                 </form>
-                <form><p><input type = "submit" value="SET ANGLE" name="setactuator"/></p></form>
+                <!-- <form><p><input type = "submit" value="SET ANGLE" name="setactuator"/></p></form> -->
             </div>
 
             <div class="filesettings">
                 <form method="post" action="/">
                     <h1>Settings Files</h1>
                     <p>Save Setting to File</p>
-                    <p>Save <input class = "faninput" input type="text" name = "filename" value = "" placeholder="file"></p>
-                    <p><input type = "submit" value="SAVE CONFIG" name="savefile"/></p>
+                    <p>Save <input class = "fileinput" input type="text" name = "filename" value = "" placeholder="file"></p>
+                    <!-- <p><input type = "submit" value="SAVE CONFIG" name="savefile"/></p> -->
+                    <button class="button" button type = "sumbit" value = "SAVE CONFIG" name = "savefile" style="vertical-align:middle"><span>SAVE CONFIG</span></button>
                 </form>
 
                 <form method="post" action="/">
                     <p>Load Setting form File</p>
-                    <p>Load <input class = "faninput" input type="text" name = "filename" value = "" placeholder="file"></p>
-                    <p><input type = "submit" value="LOAD CONFIG" name="loadfile"/></p>
+                    <p>Load <input class = "fileinput" input type="text" name = "filename" value = "" placeholder="file"></p>
+                    <!-- <p><input type = "submit" value="LOAD CONFIG" name="loadfile"/></p> -->
+                    <button class="button" button type = "sumbit" value = "LOAD CONFIG" name = "savefile" style="vertical-align:middle"><span>LOAD CONFIG</span></button>
                 </form>
             </div>
 
             <div class="run">
                 <form method="post" action="/">
                     <h1>UPDATE</h1>
-                    <p><input type = "submit" value="UPDATE " name="toros"/></p>
+                    <button class="button" button type = "sumbit" value = "UPDATE" name = "toros" style="vertical-align:middle"><span>Update</span></button>
+                    <!-- <p><input type = "submit" value="UPDATE " name="toros"/></p>-->
                 </form>
             </div>
         </div>
