--- a/WebServer/templates/test.html
+++ b/WebServer/templates/test.html
@@ -93,9 +93,6 @@
                     <input class="faninput"  type="text" name = "fan16" value = "" placeholder="speed">
                     <p>{{data['fan16'][1]}}</p>
                 </div>
-               <!--  <p><input type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p> -->
-                <button class="button" button type = "sumbit" value = "UPDATE FANS" name = "updatefan" style="vertical-align:middle" form = "gridform"><span>Update</span></button>
-                <button class="button" button type = "sumbit" value = "UPDATE FANS" id = "test" name = "updatefan" style="vertical-align:middle" class = "test" form = "gridform"><span>STOP</span></button>   
             </form>
 
 
@@ -103,11 +100,11 @@
                 <form method="post" action="/">
 					<h1>All Fans </h1>
                     <p><input type="text" name = "ALLFANS" value = "" placeholder="Enter desierd speed"></p>
-                    <p><input type = "submit" value="UPDATE ALL FANS" name="updatefan"/></p>
+                    <p><input class="button" type = "submit" value="UPDATE ALL FANS" name="updatefan"/></p>
                 </form>
-                    <p><input type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p>
+                    <p><input class="button" type = "submit" value="UPDATE FANS" name="updatefan" form="gridform" /></p>
                 <form method="post" action="/">
-                    <p><input type = "submit" value="SET FANS" name="setfan" /></p>
+                    <p><input class="button" type = "submit" value="SET FANS" name="setfan" /></p>
                 </form>
             </div>
 
@@ -133,14 +130,12 @@
                             output.innerHTML = slider.value;
                             slider.oninput = function() {output.innerHTML = this.value;}
                         </script>
-                        <p><button class="button" button type = "sumbit" value = "UPDATE ANGLE" name = "updateactuator" style="vertical-align:middle"><span>Update Angle</span></button></p>
-                       <!-- <p><input type = "submit" value="UPDATE ANGLE" name="updateactuator"/></p> -->
-                      <!--  <button class="button" button type = "sumbit" value = "UPDATE ANGLE" name = "updateactuator" style="vertical-align:middle"><span>Update Angle</span></button> -->
+                        <p><input class="button" type = "submit" value = "UPDATE ANGLE" name = "updateactuator" style="vertical-align:middle"><span>Update Angle</span></button></p>
                     </div>
                 </form>
 
                 <form method="post" action="/">
-					<p><input type = "submit" value="SET ANGLE" name="setactuator"/></p>
+					<p><input class="button" type = "submit" value="SET ANGLE" name="setactuator"/></p>
 				</form>
 
             </div>
